manifests/02b-shell-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell-pod
  namespace: k8s-training
spec:
  containers:
    - name: shell-container
      image: curlimages/curl
      command:
        - sleep
        - infinity

---
apiVersion: v1
kind: Pod
metadata:
  name: shell-outside-pod
  namespace: default
spec:
  containers:
    - name: shell-container
      image: curlimages/curl
      command:
        - sleep
        - infinity
