manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-service
  namespace: k8s-training
spec:
  ports:
    - name: app-svc-port
      protocol: TCP
      port: 80
      targetPort: app-port
  selector:
    app.kubernetes.io/name: example-app
