manifests/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
  namespace: k8s-training
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: example-app-service
                port:
                  name: app-svc-port
            pathType: Prefix
            path: /
      host: example-app.local
